# LGA_OpenInNukeX

./: .cursorrules  .gitignore  AGENTS.md  LGA_OpenInNukeX.md  LGA_QtAdapter_OpenInNukeX.py  README.md  README_OLD.md  bump_version.bat  init.py  nukeXpath.txt  qt_compat_openinnukex.py
.cursor/rules/: windows-build.mdc
Developement/: Compilar.txt
Old_Py_Version/: LGA_OpenInNukeX.py  LGA_OpenInNukeX_Ping.py  init-01.pyb
QtClient/: .qmake.stash  CAMBIOS_SIN_ADMIN.md  CHANGELOG_UI.md  CMakeLists.txt  LGA_OpenInNukeX.exe.manifest  LGA_OpenInNukeX.rc  LGA_OpenInNukeX_Qt.pro  LGA_OpenInNukeX_Qt_resource.rc  Makefile  Makefile.Debug  Makefile.Release  README_Qt.md  Reiniciar  SOLUCION_ASOCIACIONES.md  UserSettingsTab.cpp  compilar.bat  compilar.sh  compilar_dev.bat  compilar_dev.sh  compilar_qmake.bat  configwindow.cpp  configwindow.h  dark_theme.qss  deploy.bat  deploy.sh  instalador.bat  installer.iss  limpiar.bat  limpiar.sh  main.cpp  nukeopener.cpp  test.nk
QtClient/cmake/: Info.plist.in
QtClient/resources/: LGA_OpenInNukeX.icns  app.rc  nuke_icon.psd
QtClient/scripts/: asociar_con_fta.bat  compilar.bat  deploy.bat  instalador.bat  limpiar.bat  limpiar_registro.bat  test_debug.bat  test_sin_admin.bat
QtClient/src/: configwindow.cpp  configwindow.h  logger.cpp  logger.h  main.cpp  nukeopener.cpp  nukeopener.h  nukescanner.cpp  nukescanner.h  qflowlayout.cpp  qflowlayout.h
docs/: ChangeLog.md  Docu_Logging_System.md
docs/DocToMD/: Doc_GoogleDoc_a_md.md  LGA_OpenInNukeX.docx  README.md  convert_docx_to_md.py
tools/: nuke_script_load_probe.py  sync_version.py
